# canica

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  config.toml  create-venv.sh  package-lock.json  package.json  pyproject.toml  tsconfig.json  tutorial.ipynb
.gitlab/ci/: test.yml
data/: tmp_data.json
js/: BottomPanel.tsx  ColorLegend.tsx  DebugInfo.tsx  Legend.tsx  MouseHandler.tsx  ProjectedPoints.tsx  ReactViewer.tsx  StandaloneWidget.tsx  WidgetTools.tsx  algo.ts  camera.ts  colors.ts  data.ts  index.html  main.tsx  tsne.ts  types.ts  umap.ts  widget.tsx
scripts/: check_poetry_lock.py  create_if_not_exists.py  try_n_times.sh
src/canica/: data.py  standalone_widget.py  widget.py
tests/: test_data.py  test_widget_data.py
