[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canica"
version = "0.0.9"
dependencies = [
    "python>=3.9,<3.13",
    "anywidget>=0.6.5",
    "jupyterlab>=4.0.6",
    "numpy>=1.26.0",
    "pandas>=2.1.1",
    "pyarrow>=13.0.0",
    "pydantic>=2.4.2",
]

[project.optional-dependencies]
dev = ["watchfiles", "jupyterlab"]

[tool.poetry]
name = "canica"
version = "0.0.0"
description = ""
authors = ["Lakera AI"]

# # automatically add the dev feature to the default env (e.g., hatch shell)
# [tool.hatch.envs.default]
# features = ["dev"]

[tool.poetry.dependencies]
python = "^3.9,<3.13"
anywidget = "^0.6.5"
jupyterlab = "^4.0.6"
numpy = "^1.26.0"
pandas = "^2.1.1"
pyarrow = "^13.0.0"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
watchfiles = "^0.20.0"
pre-commit = "^3.4.0"
mypy = "^1.5.1"
pytest = "^7.4.2"
pandas-stubs = "^2.1.1.230928"
black = "^23.9.1"
nbstripout = "^0.6.1"


[tool.hatch.build]
only-packages = true
artifacts = ["src/canica/static/*"]

[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["src/canica/static/widget.js"]
skip-if-exists = ["src/canica/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "build"
